--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/styled-components": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.20.1",
-    "@supabase/supabase-js": "^2.39.0",
-    "styled-components": "^6.0.0",
-    "@types/styled-components": "^5.1.0"
+    "styled-components": "^6.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.2.2",
