--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,10 +1,10 @@
 # Use a lightweight Python image
 FROM python:3.11-slim
 
-# Set working directory inside the container
+# Set working directory
 WORKDIR /app
 
-# Install system dependencies required for packages like nltk, numpy, etc.
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     gcc \
@@ -13,16 +13,20 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirement file and install dependencies
+# Copy only requirements file first to enable caching
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt \
- && python -m nltk.downloader stopwords wordnet
 
-# Copy the rest of your app code into the container
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Download NLTK data separately so it’s cached unless it changes
+RUN python -m nltk.downloader stopwords wordnet
+
+# Now copy the rest of the application
 COPY . .
 
-# Expose the default port (optional for documentation)
+# Optional: expose FastAPI port
 EXPOSE 8080
 
-# Run FastAPI using Uvicorn
+# Launch app with Uvicorn
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
