req.txt updated

--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -5,6 +5,10 @@ umap-learn
 pydantic
 scikit-learn
 sentence-transformers
+transformers
+torch
+accelerate
+safetensors
 numpy
 pandas
 python-dotenv
