--- a/fastapi/fly.toml
+++ b/fastapi/fly.toml
@@ -14,6 +14,7 @@ primary_region = 'mia'
   auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 1
+  max_machines_running = 2
   processes = ['app']
 
 [[vm]]
