--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Download NLTK data separately so it’s cached unless it changes
 RUN python -m nltk.downloader stopwords wordnet
