--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,32 +1,29 @@
-# Use a lightweight Python image
-FROM python:3.11-slim
+# Builder Stage
+FROM python:3.11-slim AS builder
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    gcc \
-    libffi-dev \
-    libssl-dev \
-    python3-dev \
-    && rm -rf /var/lib/apt/lists/*
+# Install system dependencies needed to build packages
+RUN apt-get update && apt-get install -y build-essential gcc libffi-dev libssl-dev \
+  && rm -rf /var/lib/apt/lists/*
 
-# Copy only requirements file first to enable caching
+# Install Python dependencies to a separate location
 COPY requirements.txt .
+RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
 
-# Install Python dependencies
-RUN pip install -r requirements.txt
+# Download required NLTK data
+ENV PYTHONPATH=/install/lib/python3.11/site-packages
 
-# Download NLTK data separately so it’s cached unless it changes
-RUN python -m nltk.downloader stopwords wordnet
+# Final runtime image
+FROM python:3.11-slim
 
-# Now copy the rest of the application
+WORKDIR /app
+
+# Copy installed Python packages only (no build tools)
+COPY --from=builder /install /usr/local
+
+# Copy your actual app code
 COPY . .
 
-# Optional: expose FastAPI port
 EXPOSE 8080
-
-# Launch app with Uvicorn
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
